fix(project): overflow bug

--- a/src/components/VirtualizedGrid/VirtualizedGrid.scss
+++ b/src/components/VirtualizedGrid/VirtualizedGrid.scss
@@ -1,6 +1,3 @@
 .ReactVirtualized__Grid {
   overflow: visible !important;
 }
-.ReactVirtualized__Grid__innerScrollContainer {
-  overflow: visible !important;
-}
